src/CalcEngine/Parsers/Antlr/AntlrCalcEngineParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g 2011-01-28 15:07:33

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using Antlr.Runtime;
using Antlr.Runtime.Tree;
using Stack = Antlr.Runtime.Collections.StackList;


namespace CalcEngine.Parsers.Antlr
{
	public class AntlrCalcEngineParser : Parser
	{
		public static readonly string[] tokenNames = new[]
		                                             	{
		                                             			"<invalid>",
		                                             			"<EOR>",
		                                             			"<DOWN>",
		                                             			"<UP>",
		                                             			"CLASS",
		                                             			"BASE_CLASS",
		                                             			"DISCRIMINATOR",
		                                             			"PROPERTY",
		                                             			"RELATIONSHIP",
		                                             			"JOIN",
		                                             			"TARGET",
		                                             			"NAME",
		                                             			"STATEMENT_BLOCK",
		                                             			"FORMULA",
		                                             			"MODIFIERS",
		                                             			"EXPRESSION",
		                                             			"IDENTIFIER",
		                                             			"THIS",
		                                             			"ENTITY",
		                                             			"FUNCTION",
		                                             			"PARAMETERS",
		                                             			"FILTER",
		                                             			"SOURCE",
		                                             			"CRITERIA",
		                                             			"OP_OR",
		                                             			"OP_AND",
		                                             			"OP_NOT",
		                                             			"OP_EQ",
		                                             			"OP_NE",
		                                             			"OP_LT",
		                                             			"OP_GT",
		                                             			"OP_LTE",
		                                             			"OP_GTE",
		                                             			"OP_ADD",
		                                             			"OP_SUBTRACT",
		                                             			"OP_MULTIPLY",
		                                             			"OP_DIVIDE",
		                                             			"OP_MODULUS",
		                                             			"OP_ASSIGN",
		                                             			"OP_UNARY_NEGATION",
		                                             			"TRUE",
		                                             			"FALSE",
		                                             			"ID",
		                                             			"LITERAL",
		                                             			"INT",
		                                             			"FLOAT",
		                                             			"DQUOT",
		                                             			"SQUOT",
		                                             			"EXPONENT",
		                                             			"COMMENT",
		                                             			"WS",
		                                             			"ESC_SEQ",
		                                             			"STRING",
		                                             			"CHAR",
		                                             			"HEX_DIGIT",
		                                             			"UNICODE_ESC",
		                                             			"OCTAL_ESC",
		                                             			"'class'",
		                                             			"':'",
		                                             			"'where'",
		                                             			"'{'",
		                                             			"'}'",
		                                             			"'property'",
		                                             			"';'",
		                                             			"'primarykey'",
		                                             			"'calculated'",
		                                             			"'abstract'",
		                                             			"'relationship'",
		                                             			"'='",
		                                             			"'('",
		                                             			"')'",
		                                             			"'not'",
		                                             			"'!'",
		                                             			"'or'",
		                                             			"'||'",
		                                             			"'and'",
		                                             			"'&&'",
		                                             			"'mod'",
		                                             			"'%'",
		                                             			"'=='",
		                                             			"'!='",
		                                             			"'<>'",
		                                             			"'<'",
		                                             			"'>'",
		                                             			"'<='",
		                                             			"'>='",
		                                             			"'+'",
		                                             			"'-'",
		                                             			"'*'",
		                                             			"'/'",
		                                             			"'.'",
		                                             			"'this'",
		                                             			"'['",
		                                             			"']'",
		                                             			"','",
		                                             			"'true'",
		                                             			"'false'"
		                                             	};

		public const int FUNCTION = 19;
		public const int EXPONENT = 48;
		public const int OP_AND = 25;
		public const int OCTAL_ESC = 56;
		public const int CHAR = 53;
		public const int EOF = -1;
		public const int T__93 = 93;
		public const int T__94 = 94;
		public const int T__91 = 91;
		public const int OP_EQ = 27;
		public const int T__92 = 92;
		public const int NAME = 11;
		public const int T__90 = 90;
		public const int SQUOT = 47;
		public const int OP_GTE = 32;
		public const int THIS = 17;
		public const int OP_LT = 29;
		public const int COMMENT = 49;
		public const int T__96 = 96;
		public const int T__95 = 95;
		public const int OP_NE = 28;
		public const int T__80 = 80;
		public const int T__81 = 81;
		public const int T__82 = 82;
		public const int T__83 = 83;
		public const int OP_ADD = 33;
		public const int INT = 44;
		public const int T__85 = 85;
		public const int T__84 = 84;
		public const int T__87 = 87;
		public const int T__86 = 86;
		public const int T__89 = 89;
		public const int RELATIONSHIP = 8;
		public const int T__88 = 88;
		public const int T__71 = 71;
		public const int WS = 50;
		public const int T__72 = 72;
		public const int T__70 = 70;
		public const int PROPERTY = 7;
		public const int STATEMENT_BLOCK = 12;
		public const int FILTER = 21;
		public const int T__76 = 76;
		public const int T__75 = 75;
		public const int FALSE = 41;
		public const int T__74 = 74;
		public const int T__73 = 73;
		public const int T__79 = 79;
		public const int T__78 = 78;
		public const int T__77 = 77;
		public const int T__68 = 68;
		public const int T__69 = 69;
		public const int T__66 = 66;
		public const int T__67 = 67;
		public const int CLASS = 4;
		public const int T__64 = 64;
		public const int T__65 = 65;
		public const int T__62 = 62;
		public const int FORMULA = 13;
		public const int T__63 = 63;
		public const int PARAMETERS = 20;
		public const int OP_ASSIGN = 38;
		public const int OP_OR = 24;
		public const int OP_UNARY_NEGATION = 39;
		public const int DQUOT = 46;
		public const int OP_GT = 30;
		public const int SOURCE = 22;
		public const int BASE_CLASS = 5;
		public const int FLOAT = 45;
		public const int T__61 = 61;
		public const int ID = 42;
		public const int T__60 = 60;
		public const int ENTITY = 18;
		public const int MODIFIERS = 14;
		public const int T__57 = 57;
		public const int T__58 = 58;
		public const int ESC_SEQ = 51;
		public const int IDENTIFIER = 16;
		public const int T__59 = 59;
		public const int OP_NOT = 26;
		public const int EXPRESSION = 15;
		public const int OP_MULTIPLY = 35;
		public const int OP_LTE = 31;
		public const int UNICODE_ESC = 55;
		public const int OP_SUBTRACT = 34;
		public const int HEX_DIGIT = 54;
		public const int OP_DIVIDE = 36;
		public const int LITERAL = 43;
		public const int TARGET = 10;
		public const int TRUE = 40;
		public const int JOIN = 9;
		public const int CRITERIA = 23;
		public const int OP_MODULUS = 37;
		public const int DISCRIMINATOR = 6;
		public const int STRING = 52;

		// delegates
		// delegators


		public AntlrCalcEngineParser( ITokenStream input )
				: this( input, new RecognizerSharedState() ) {}


		public AntlrCalcEngineParser( ITokenStream input, RecognizerSharedState state )
				: base( input, state )
		{
			InitializeCyclicDFAs();
		}


		protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

		public ITreeAdaptor TreeAdaptor
		{
			get { return adaptor; }
			set { adaptor = value; }
		}

		public override string[] TokenNames
		{
			get { return tokenNames; }
		}

		public override string GrammarFileName
		{
			get { return "C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g"; }
		}


		public class root_return : ParserRuleReturnScope
		{
			private CommonTree tree;

			public override object Tree
			{
				get { return tree; }
				set { tree = (CommonTree)value; }
			}
		} ;


		// $ANTLR start "root"
		// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:68:1: root : ( rootLevelStatement )* ;
		public root_return root() // throws RecognitionException [1]
		{
			var retval = new root_return();
			retval.Start = input.LT( 1 );

			CommonTree root_0 = null;

			rootLevelStatement_return rootLevelStatement1 = default( rootLevelStatement_return );


			try
			{
				// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:69:2: ( ( rootLevelStatement )* )
				// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:69:4: ( rootLevelStatement )*
				{
					root_0 = (CommonTree)adaptor.GetNilNode();

					// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:69:4: ( rootLevelStatement )*
					do
					{
						int alt1 = 2;
						int LA1_0 = input.LA( 1 );

						if ( ( LA1_0 == ID || LA1_0 == 57 ) )
							alt1 = 1;


						switch ( alt1 )
						{
							case 1:
								// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:69:4: rootLevelStatement
								{
									PushFollow( FOLLOW_rootLevelStatement_in_root231 );
									rootLevelStatement1 = rootLevelStatement();
									state.followingStackPointer--;

									adaptor.AddChild( root_0, rootLevelStatement1.Tree );
								}
								break;

							default:
								goto loop1;
						}
					} while ( true );

					loop1:
					; // Stops C# compiler whining that label 'loop1' has no statements
				}

				retval.Stop = input.LT( -1 );

				retval.Tree = adaptor.RulePostProcessing( root_0 );
				adaptor.SetTokenBoundaries( retval.Tree, (IToken)retval.Start, (IToken)retval.Stop );
			}
			catch ( RecognitionException re )
			{
				ReportError( re );
				Recover( input, re );
				// Conversion of the second argument necessary, but harmless
				retval.Tree = adaptor.ErrorNode( input, (IToken)retval.Start, input.LT( -1 ), re );
			}
			finally {}
			return retval;
		}


		// $ANTLR end "root"

		public class rootLevelStatement_return : ParserRuleReturnScope
		{
			private CommonTree tree;

			public override object Tree
			{
				get { return tree; }
				set { tree = (CommonTree)value; }
			}
		} ;


		// $ANTLR start "rootLevelStatement"
		// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:71:1: rootLevelStatement : ( formulaDeclaration | classDeclaration );
		public rootLevelStatement_return rootLevelStatement() // throws RecognitionException [1]
		{
			var retval = new rootLevelStatement_return();
			retval.Start = input.LT( 1 );

			CommonTree root_0 = null;

			formulaDeclaration_return formulaDeclaration2 = default( formulaDeclaration_return );

			classDeclaration_return classDeclaration3 = default( classDeclaration_return );


			try
			{
				// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:72:2: ( formulaDeclaration | classDeclaration )
				int alt2 = 2;
				int LA2_0 = input.LA( 1 );

				if ( ( LA2_0 == ID ) )
					alt2 = 1;
				else if ( ( LA2_0 == 57 ) )
					alt2 = 2;
				else
				{
					var nvae_d2s0 =
							new NoViableAltException( "", 2, 0, input );

					throw nvae_d2s0;
				}
				switch ( alt2 )
				{
					case 1:
						// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:72:4: formulaDeclaration
						{
							root_0 = (CommonTree)adaptor.GetNilNode();

							PushFollow( FOLLOW_formulaDeclaration_in_rootLevelStatement242 );
							formulaDeclaration2 = formulaDeclaration();
							state.followingStackPointer--;

							adaptor.AddChild( root_0, formulaDeclaration2.Tree );
						}
						break;
					case 2:
						// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:73:4: classDeclaration
						{
							root_0 = (CommonTree)adaptor.GetNilNode();

							PushFollow( FOLLOW_classDeclaration_in_rootLevelStatement248 );
							classDeclaration3 = classDeclaration();
							state.followingStackPointer--;

							adaptor.AddChild( root_0, classDeclaration3.Tree );
						}
						break;
				}
				retval.Stop = input.LT( -1 );

				retval.Tree = adaptor.RulePostProcessing( root_0 );
				adaptor.SetTokenBoundaries( retval.Tree, (IToken)retval.Start, (IToken)retval.Stop );
			}
			catch ( RecognitionException re )
			{
				ReportError( re );
				Recover( input, re );
				// Conversion of the second argument necessary, but harmless
				retval.Tree = adaptor.ErrorNode( input, (IToken)retval.Start, input.LT( -1 ), re );
			}
			finally {}
			return retval;
		}


		// $ANTLR end "rootLevelStatement"

		public class classDeclaration_return : ParserRuleReturnScope
		{
			private CommonTree tree;

			public override object Tree
			{
				get { return tree; }
				set { tree = (CommonTree)value; }
			}
		} ;


		// $ANTLR start "classDeclaration"
		// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:79:1: classDeclaration : 'class' name ( baseClassDeclaration )? classStatementBlock -> ^( CLASS name ( baseClassDeclaration )? classStatementBlock ) ;
		public classDeclaration_return classDeclaration() // throws RecognitionException [1]
		{
			var retval = new classDeclaration_return();
			retval.Start = input.LT( 1 );

			CommonTree root_0 = null;

			IToken string_literal4 = null;
			name_return name5 = default( name_return );

			baseClassDeclaration_return baseClassDeclaration6 = default( baseClassDeclaration_return );

			classStatementBlock_return classStatementBlock7 = default( classStatementBlock_return );


			CommonTree string_literal4_tree = null;
			var stream_57 = new RewriteRuleTokenStream( adaptor, "token 57" );
			var stream_classStatementBlock = new RewriteRuleSubtreeStream( adaptor, "rule classStatementBlock" );
			var stream_name = new RewriteRuleSubtreeStream( adaptor, "rule name" );
			var stream_baseClassDeclaration = new RewriteRuleSubtreeStream( adaptor, "rule baseClassDeclaration" );
			try
			{
				// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:80:2: ( 'class' name ( baseClassDeclaration )? classStatementBlock -> ^( CLASS name ( baseClassDeclaration )? classStatementBlock ) )
				// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:80:4: 'class' name ( baseClassDeclaration )? classStatementBlock
				{
					string_literal4 = (IToken)Match( input, 57, FOLLOW_57_in_classDeclaration262 );
					stream_57.Add( string_literal4 );

					PushFollow( FOLLOW_name_in_classDeclaration264 );
					name5 = name();
					state.followingStackPointer--;

					stream_name.Add( name5.Tree );
					// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:80:17: ( baseClassDeclaration )?
					int alt3 = 2;
					int LA3_0 = input.LA( 1 );

					if ( ( LA3_0 == 58 ) )
						alt3 = 1;
					switch ( alt3 )
					{
						case 1:
							// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:80:17: baseClassDeclaration
							{
								PushFollow( FOLLOW_baseClassDeclaration_in_classDeclaration266 );
								baseClassDeclaration6 = baseClassDeclaration();
								state.followingStackPointer--;

								stream_baseClassDeclaration.Add( baseClassDeclaration6.Tree );
							}
							break;
					}

					PushFollow( FOLLOW_classStatementBlock_in_classDeclaration269 );
					classStatementBlock7 = classStatementBlock();
					state.followingStackPointer--;

					stream_classStatementBlock.Add( classStatementBlock7.Tree );


					// AST REWRITE
					// elements:          name, classStatementBlock, baseClassDeclaration
					// token labels:      
					// rule labels:       retval
					// token list labels: 
					// rule list labels:  
					// wildcard labels: 
					retval.Tree = root_0;
					var stream_retval = new RewriteRuleSubtreeStream( adaptor, "rule retval", retval != null ? retval.Tree : null );

					root_0 = (CommonTree)adaptor.GetNilNode();
					// 80:59: -> ^( CLASS name ( baseClassDeclaration )? classStatementBlock )
					{
						// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:80:62: ^( CLASS name ( baseClassDeclaration )? classStatementBlock )
						{
							var root_1 = (CommonTree)adaptor.GetNilNode();
							root_1 = (CommonTree)adaptor.BecomeRoot( adaptor.Create( CLASS, "CLASS" ), root_1 );

							adaptor.AddChild( root_1, stream_name.NextTree() );
							// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:80:76: ( baseClassDeclaration )?
							if ( stream_baseClassDeclaration.HasNext() )
								adaptor.AddChild( root_1, stream_baseClassDeclaration.NextTree() );
							stream_baseClassDeclaration.Reset();
							adaptor.AddChild( root_1, stream_classStatementBlock.NextTree() );

							adaptor.AddChild( root_0, root_1 );
						}
					}

					retval.Tree = root_0;
					retval.Tree = root_0;
				}

				retval.Stop = input.LT( -1 );

				retval.Tree = adaptor.RulePostProcessing( root_0 );
				adaptor.SetTokenBoundaries( retval.Tree, (IToken)retval.Start, (IToken)retval.Stop );
			}
			catch ( RecognitionException re )
			{
				ReportError( re );
				Recover( input, re );
				// Conversion of the second argument necessary, but harmless
				retval.Tree = adaptor.ErrorNode( input, (IToken)retval.Start, input.LT( -1 ), re );
			}
			finally {}
			return retval;
		}


		// $ANTLR end "classDeclaration"

		public class baseClassDeclaration_return : ParserRuleReturnScope
		{
			private CommonTree tree;

			public override object Tree
			{
				get { return tree; }
				set { tree = (CommonTree)value; }
			}
		} ;


		// $ANTLR start "baseClassDeclaration"
		// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:82:1: baseClassDeclaration : ':' name 'where' expression -> ^( BASE_CLASS name ^( DISCRIMINATOR expression ) ) ;
		public baseClassDeclaration_return baseClassDeclaration() // throws RecognitionException [1]
		{
			var retval = new baseClassDeclaration_return();
			retval.Start = input.LT( 1 );

			CommonTree root_0 = null;

			IToken char_literal8 = null;
			IToken string_literal10 = null;
			name_return name9 = default( name_return );

			expression_return expression11 = default( expression_return );


			CommonTree char_literal8_tree = null;
			CommonTree string_literal10_tree = null;
			var stream_59 = new RewriteRuleTokenStream( adaptor, "token 59" );
			var stream_58 = new RewriteRuleTokenStream( adaptor, "token 58" );
			var stream_expression = new RewriteRuleSubtreeStream( adaptor, "rule expression" );
			var stream_name = new RewriteRuleSubtreeStream( adaptor, "rule name" );
			try
			{
				// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:83:2: ( ':' name 'where' expression -> ^( BASE_CLASS name ^( DISCRIMINATOR expression ) ) )
				// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:83:4: ':' name 'where' expression
				{
					char_literal8 = (IToken)Match( input, 58, FOLLOW_58_in_baseClassDeclaration294 );
					stream_58.Add( char_literal8 );

					PushFollow( FOLLOW_name_in_baseClassDeclaration296 );
					name9 = name();
					state.followingStackPointer--;

					stream_name.Add( name9.Tree );
					string_literal10 = (IToken)Match( input, 59, FOLLOW_59_in_baseClassDeclaration298 );
					stream_59.Add( string_literal10 );

					PushFollow( FOLLOW_expression_in_baseClassDeclaration300 );
					expression11 = expression();
					state.followingStackPointer--;

					stream_expression.Add( expression11.Tree );


					// AST REWRITE
					// elements:          name, expression
					// token labels:      
					// rule labels:       retval
					// token list labels: 
					// rule list labels:  
					// wildcard labels: 
					retval.Tree = root_0;
					var stream_retval = new RewriteRuleSubtreeStream( adaptor, "rule retval", retval != null ? retval.Tree : null );

					root_0 = (CommonTree)adaptor.GetNilNode();
					// 83:32: -> ^( BASE_CLASS name ^( DISCRIMINATOR expression ) )
					{
						// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:83:35: ^( BASE_CLASS name ^( DISCRIMINATOR expression ) )
						{
							var root_1 = (CommonTree)adaptor.GetNilNode();
							root_1 = (CommonTree)adaptor.BecomeRoot( adaptor.Create( BASE_CLASS, "BASE_CLASS" ), root_1 );

							adaptor.AddChild( root_1, stream_name.NextTree() );
							// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:83:54: ^( DISCRIMINATOR expression )
							{
								var root_2 = (CommonTree)adaptor.GetNilNode();
								root_2 = (CommonTree)adaptor.BecomeRoot( adaptor.Create( DISCRIMINATOR, "DISCRIMINATOR" ), root_2 );

								adaptor.AddChild( root_2, stream_expression.NextTree() );

								adaptor.AddChild( root_1, root_2 );
							}

							adaptor.AddChild( root_0, root_1 );
						}
					}

					retval.Tree = root_0;
					retval.Tree = root_0;
				}

				retval.Stop = input.LT( -1 );

				retval.Tree = adaptor.RulePostProcessing( root_0 );
				adaptor.SetTokenBoundaries( retval.Tree, (IToken)retval.Start, (IToken)retval.Stop );
			}
			catch ( RecognitionException re )
			{
				ReportError( re );
				Recover( input, re );
				// Conversion of the second argument necessary, but harmless
				retval.Tree = adaptor.ErrorNode( input, (IToken)retval.Start, input.LT( -1 ), re );
			}
			finally {}
			return retval;
		}


		// $ANTLR end "baseClassDeclaration"

		public class classStatementBlock_return : ParserRuleReturnScope
		{
			private CommonTree tree;

			public override object Tree
			{
				get { return tree; }
				set { tree = (CommonTree)value; }
			}
		} ;


		// $ANTLR start "classStatementBlock"
		// C:\\Projects\\CalcEngine\\src\\CalcEngine\\Parsers\\Antlr\\AntlrCalcEngine.g:85:1: classStatementBlock : '{' ( classLevelStatement )* '}' -> ^( STATEMENT_BLOCK ( classLevelStatement )* ) ;
		public classStatementBlock_return classStatementBlock() // throws RecognitionException [1]
		{
			var retval = new classStatementBlock_return();
			retval.Start = input.LT( 1 );

			CommonTree root_0 = null;

			IToken char_literal12 = null;
			IToken char_literal14 = null;
			classLevelStatement_return classLevelStatement13 = default( classLevelStatement_return );

